[package]
name = "subcmd"
version = "0.1.0"
authors = ["Samuel Dolt <samuel@dolt.ch>"]
description = "Cargo like subcommand parser"
documentation = "https://samdolt.github.io/subcmd-rs/"
repository = "https://github.com/samdolt/subcmd-rs/"
homepage = "https://github.com/samdolt/subcmd-rs/"
readme = "README.md"
keywords = ["subcommand", "args", "argv", "options"]
license = "MIT"

[dependencies]
getopts = "0.2"
tabwriter = "0.1"
strsim = "0.4"
ansi_term = "0.7.1"
